feat: 修复WebUI问题, 公告系统, 移除Docker/CLI, 一键部署脚本